Refactor the multiplex protocol into a new top level mjlib dir
I realized I was going to have many classes related to this protocol,
some of which were no-allocation and others not, which wanted to share
functionality.  Also, the names were getting long and annoying when
restricted to the mjlib::micro namespace.

--- a/mjlib/BUILD
+++ b/mjlib/BUILD
@@ -22,7 +22,8 @@ test_suite(
         "//mjlib/base:test",
         "//mjlib/io:test",
         "//mjlib/micro:test",
-        "//mjlib/micro:py_test",
+        "//mjlib/multiplex:test",
+        "//mjlib/multiplex:py_test",
         "//mjlib/telemetry:test",
     ],
 )
